--- a/.classpath
+++ b/.classpath
@@ -35,5 +35,7 @@
 			<attribute name="owner.project.facets" value="jboss.m2"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Robin/Downloads/JUnitParams-1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Robin/Desktop/commons-io-2.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
