--- a/.classpath
+++ b/.classpath
@@ -35,7 +35,6 @@
 			<attribute name="owner.project.facets" value="jboss.m2"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Robin/Downloads/JUnitParams-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Robin/Desktop/commons-io-2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/A00226084/Desktop/saved (2)/Agile Design &amp; Testing/Jar Files/JUnitParams-1.0.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
